<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/valUnique"
            android:textAlignment="center"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textNom"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/txtNombre"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lblNombre"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textApell"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/txtApellidos"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lblApellidos"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCorr"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/txtCorreo"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lblCorreo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNum"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/txtNumero"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/lblNumber"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""/>
        </LinearLayout>

        <ImageView
            android:id="@+id/DeleteIcon"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="334dp"
            app:srcCompat="@drawable/baseline_minimize_24" />

        <ImageView
            android:id="@+id/UpdateIcon"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="334dp"
            android:layout_marginTop="14dp"
            app:srcCompat="@drawable/baseline_autorenew_24" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
